--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+asgiref==3.3.1
+certifi==2020.12.5
 dj-database-url==0.5.0
 Django==3.1.5
-django-allauth==0.44.0
-django-colorfield==0.4.1
-django-crispy-forms==1.10.0
 django-heroku==0.3.1
-gunicorn==20.1.0
+gunicorn==20.0.4
+psycopg2==2.8.6
+pygame==1.9.6
+pytz==2020.5
+sqlparse==0.4.1
+whitenoise==5.2.0
+wincertstore==0.2
+yfinance==0.1.55
